# internal/api/openapi.yaml
@@ -3,14 +3,7 @@ servers:
   - url: /v3
 info:
   description: |-
-    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
-    Swagger at [http://swagger.io](http://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
-    You can now help us improve the API whether it's by making changes to the definition itself or to the code.
-    That way, with time, we can improve the API in general, and expose some of the new features in OAS3.
-
-    Some useful links:
-    - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)
-    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
+    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.
   version: 1.0.20-SNAPSHOT
   title: Swagger Petstore - OpenAPI 3.0
   termsOfService: 'http://swagger.io/terms/'
@@ -22,14 +15,8 @@ info:
 tags:
   - name: pet
     description: Everything about your Pets
-    externalDocs:
-      description: Find out more
-      url: 'http://swagger.io'
   - name: store
     description: Access to Petstore orders
-    externalDocs:
-      description: Find out more about our store
-      url: 'http://swagger.io'
   - name: user
     description: Operations about user
 paths:
@@ -44,12 +31,9 @@ paths:
         '200':
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: 'pet.yaml#/components/schemas/Pet'
         '405':
           description: Invalid input
       security:
@@ -62,13 +46,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Pet'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: 'pet.yaml#/components/schemas/Pet'
     put:
       tags:
         - pet
@@ -79,12 +57,9 @@ paths:
         '200':
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: 'pet.yaml#/components/schemas/Pet'
         '400':
           description: Invalid ID supplied
         '404':
@@ -101,13 +76,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Pet'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: 'pet.yaml#/components/schemas/Pet'
   /pet/findByStatus:
     get:
       tags:
@@ -132,16 +101,11 @@ paths:
         '200':
           description: successful operation
           content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: 'pet.yaml#/components/schemas/Pet'
         '400':
           description: Invalid status value
       security:
@@ -153,9 +117,7 @@ paths:
       tags:
         - pet
       summary: Finds Pets by tags
-      description: >-
-        Multiple tags can be provided with comma separated strings. Use tag1,
-        tag2, tag3 for testing.
+      description: Multiple tags can be provided with comma separated strings
       operationId: findPetsByTags
       parameters:
         - name: tags
@@ -171,16 +133,11 @@ paths:
         '200':
           description: successful operation
           content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: 'pet.yaml#/components/schemas/Pet'
         '400':
           description: Invalid tag value
       security:
@@ -206,12 +163,9 @@ paths:
         '200':
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: 'pet.yaml#/components/schemas/Pet'
         '400':
           description: Invalid ID supplied
         '404':
@@ -225,7 +179,6 @@ paths:
       tags:
         - pet
       summary: Updates a pet in the store with form data
-      description: ''
       operationId: updatePetWithForm
       parameters:
         - name: petId
@@ -256,7 +209,6 @@ paths:
       tags:
         - pet
       summary: Deletes a pet
-      description: ''
       operationId: deletePet
       parameters:
         - name: api_key
@@ -284,7 +236,6 @@ paths:
       tags:
         - pet
       summary: uploads an image
-      description: ''
       operationId: uploadFile
       parameters:
         - name: petId
@@ -306,7 +257,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponse'
+                $ref: 'pet.yaml#/components/schemas/ApiResponse'
       security:
         - petstore_auth:
             - 'write:pets'
@@ -324,7 +275,6 @@ paths:
       summary: Returns pet inventories by status
       description: Returns a map of status codes to quantities
       operationId: getInventory
-      x-swagger-router-controller: OrderController
       responses:
         '200':
           description: successful operation
@@ -344,36 +294,26 @@ paths:
       summary: Place an order for a pet
       description: Place a new order in the store
       operationId: placeOrder
-      x-swagger-router-controller: OrderController
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: 'store.yaml#/components/schemas/Order'
         '405':
           description: Invalid input
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Order'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Order'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Order'
+              $ref: 'store.yaml#/components/schemas/Order'
   '/store/order/{orderId}':
     get:
       tags:
         - store
       summary: Find purchase order by ID
-      x-swagger-router-controller: OrderController
-      description: >-
-        For valid response try integer IDs with value <= 5 or > 10. Other values
-        will generate exceptions.
+      description: For valid response try integer IDs with value <= 5 or > 10
       operationId: getOrderById
       parameters:
         - name: orderId
@@ -387,12 +327,9 @@ paths:
         '200':
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Order'
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: 'store.yaml#/components/schemas/Order'
         '400':
           description: Invalid ID supplied
         '404':
@@ -401,10 +338,7 @@ paths:
       tags:
         - store
       summary: Delete purchase order by ID
-      x-swagger-router-controller: OrderController
-      description: >-
-        For valid response try integer IDs with value < 1000. Anything above
-        1000 or nonintegers will generate API errors
+      description: For valid response try integer IDs with value < 1000
       operationId: deleteOrder
       parameters:
         - name: orderId
@@ -432,21 +366,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
+                $ref: 'user.yaml#/components/schemas/User'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
+              $ref: 'user.yaml#/components/schemas/User'
         description: Created user object
   /user/createWithList:
     post:
@@ -454,18 +379,14 @@ paths:
         - user
       summary: Creates list of users with given input array
       description: 'Creates list of users with given input array'
-      x-swagger-router-controller: UserController
       operationId: createUsersWithListInput
       responses:
         '200':
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: 'user.yaml#/components/schemas/User'
         default:
           description: successful operation
       requestBody:
@@ -474,13 +395,12 @@ paths:
             schema:
               type: array
               items:
-                $ref: '#/components/schemas/User'
+                $ref: 'user.yaml#/components/schemas/User'
   /user/login:
     get:
       tags:
         - user
       summary: Logs user into the system
-      description: ''
       operationId: loginUser
       parameters:
         - name: username
@@ -510,9 +430,6 @@ paths:
                 type: string
                 format: date-time
           content:
-            application/xml:
-              schema:
-                type: string
             application/json:
               schema:
                 type: string
@@ -523,9 +440,7 @@ paths:
       tags:
         - user
       summary: Logs out current logged in user session
-      description: ''
       operationId: logoutUser
-      parameters: []
       responses:
         default:
           description: successful operation
@@ -534,12 +449,11 @@ paths:
       tags:
         - user
       summary: Get user by user name
-      description: ''
       operationId: getUserByName
       parameters:
         - name: username
           in: path
-          description: 'The name that needs to be fetched. Use user1 for testing. '
+          description: The name that needs to be fetched
           required: true
           schema:
             type: string
@@ -547,12 +461,9 @@ paths:
         '200':
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: 'user.yaml#/components/schemas/User'
         '400':
           description: Invalid username supplied
         '404':
@@ -561,7 +472,6 @@ paths:
       tags:
         - user
       summary: Update user
-      x-swagger-router-controller: UserController
       description: This can only be done by the logged in user.
       operationId: updateUser
       parameters:
@@ -579,13 +489,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
+              $ref: 'user.yaml#/components/schemas/User'
     delete:
       tags:
         - user
